mariadb-10/stderr.log
+ CFLAGS='-I/home/user/anaconda3/envs/_build/include -I/home/user/anaconda3/envs/_build/include/ncurses'
+ CPPFLAGS='-I/home/user/anaconda3/envs/_build/include -I/home/user/anaconda3/envs/_build/include/ncurses'
+ CXXFLAGS='-I/home/user/anaconda3/envs/_build/include -I/home/user/anaconda3/envs/_build/include/ncurses'
+ LDFLAGS=-L/home/user/anaconda3/envs/_build/lib
+ cmake . -DBUILD_CONFIG=mysql_release -DCMAKE_PREFIX_PATH:PATH=/home/user/anaconda3/envs/_build -DCMAKE_INSTALL_PREFIX:PATH=/home/user/anaconda3/envs/_build -DMYSQL_DATADIR:PATH=/home/user/anaconda3/envs/_build/data
+ make
/usr/bin/ar: creating /home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/libmysql/libmysqlclient.a
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/sql/sql_yacc.yy:1022.1-12: warning: deprecated directive, use ‘%pure-parser’ [-Wdeprecated]
 %pure_parser                                    /* We have threads */
 ^^^^^^^^^^^^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/storage/mroonga/vendor/groonga/lib/expr.c: In function ‘grn_expr_exec’:
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/storage/mroonga/vendor/groonga/lib/expr.c:3543:1: warning: const/copy propagation disabled: 21688 basic blocks and 63352 registers [-Wdisabled-optimization]
 }
 ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/storage/mroonga/vendor/groonga/lib/expr.c:3543:1: warning: PRE disabled: 21688 basic blocks and 63352 registers [-Wdisabled-optimization]
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/storage/mroonga/vendor/groonga/lib/expr.c:3543:1: warning: const/copy propagation disabled: 21688 basic blocks and 63352 registers [-Wdisabled-optimization]
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/storage/mroonga/vendor/groonga/lib/expr.c:3543:1: warning: const/copy propagation disabled: 19113 basic blocks and 64360 registers [-Wdisabled-optimization]
CMake Warning (dev) in CMakeLists.txt:
  No cmake_minimum_required command is present.  A line of code such as

    cmake_minimum_required(VERSION 3.5)

  should be added at the top of the file.  The version specified may be lower
  if you wish to support older CMake versions for this project.  For more
  information run "cmake --help-policy CMP0000".
This warning is for project developers.  Use -Wno-dev to suppress it.

/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/storage/tokudb/PerconaFT/xz/src/build_lzma/src/liblzma/lz/lz_encoder.c: In function ‘fill_window’:
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/storage/tokudb/PerconaFT/xz/src/build_lzma/src/liblzma/lz/lz_encoder.c:89:9: warning: variable ‘in_used’ set but not used [-Wunused-but-set-variable]
  size_t in_used;
         ^
In file included from /home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/plugin/auth_gssapi/client_plugin.cc:37:0:
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/include/mysql/client_plugin.h:64:9: warning: ‘_mysql_client_plugin_declaration_’ initialized and declared ‘extern’ [enabled by default]
         _mysql_client_plugin_declaration_ = {   \
         ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/plugin/auth_gssapi/client_plugin.cc:101:1: note: in expansion of macro ‘mysql_declare_client_plugin’
 mysql_declare_client_plugin(AUTHENTICATION)
 ^
troff: fatal error: can't find macro file m
troff: fatal error: can't find macro file m
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc: In function ‘int com_status(String*, char*)’:
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4738:13: error: ‘A_BOLD’ was not declared in this scope
     vidattr(A_BOLD);
             ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4738:19: error: ‘vidattr’ was not declared in this scope
     vidattr(A_BOLD);
                   ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4740:13: error: ‘A_NORMAL’ was not declared in this scope
     vidattr(A_NORMAL);
             ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4808:13: error: ‘A_BOLD’ was not declared in this scope
     vidattr(A_BOLD);
             ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4808:19: error: ‘vidattr’ was not declared in this scope
     vidattr(A_BOLD);
                   ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4810:13: error: ‘A_NORMAL’ was not declared in this scope
     vidattr(A_NORMAL);
             ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc: In function ‘int put_info(const char*, INFO_TYPE, uint, const char*)’:
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4905:47: error: ‘setupterm’ was not declared in this scope
       (void) setupterm((char *)0, 1, (int *) 0);
                                               ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4918:15: error: ‘A_STANDOUT’ was not declared in this scope
       vidattr(A_STANDOUT);
               ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4918:25: error: ‘vidattr’ was not declared in this scope
       vidattr(A_STANDOUT);
                         ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4937:15: error: ‘A_BOLD’ was not declared in this scope
       vidattr(A_BOLD);
               ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4937:21: error: ‘vidattr’ was not declared in this scope
       vidattr(A_BOLD);
                     ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4939:13: error: ‘A_NORMAL’ was not declared in this scope
     vidattr(A_NORMAL);
             ^
/home/user/anaconda3/conda-bld/work/server-mariadb-10.1.13/client/mysql.cc:4939:21: error: ‘vidattr’ was not declared in this scope
     vidattr(A_NORMAL);
                     ^
make[2]: *** [client/CMakeFiles/mysql.dir/mysql.cc.o] Error 1
make[1]: *** [client/CMakeFiles/mysql.dir/all] Error 2
make: *** [all] Error 2
Using Anaconda Cloud api site https://api.anaconda.org
Command failed: /bin/bash -x -e /home/user/anaconda/conda-recipes-extra/mariadb-10/build.sh
